logs/0-orchestrator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/0_orchestrator-1.1.0a8.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/aioredis'...
Listing './lib/python3.5/site-packages/aioredis/commands'...
Listing './lib/python3.5/site-packages/aioredis/sentinel'...
Listing './lib/python3.5/site-packages/aioredis-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/etcd3'...
Listing './lib/python3.5/site-packages/etcd3/etcdrpc'...
Listing './lib/python3.5/site-packages/etcd3-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/grpc'...
Listing './lib/python3.5/site-packages/grpc/_cython'...
Listing './lib/python3.5/site-packages/grpc/_cython/_credentials'...
Listing './lib/python3.5/site-packages/grpc/_cython/_cygrpc'...
Listing './lib/python3.5/site-packages/grpc/beta'...
Listing './lib/python3.5/site-packages/grpc/framework'...
Listing './lib/python3.5/site-packages/grpc/framework/common'...
Listing './lib/python3.5/site-packages/grpc/framework/foundation'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces/base'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces/face'...
Listing './lib/python3.5/site-packages/grpcio-1.8.4.dist-info'...
Listing './lib/python3.5/site-packages/hiredis'...
Listing './lib/python3.5/site-packages/hiredis-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/monotonic-1.4.dist-info'...
Listing './lib/python3.5/site-packages/netaddr'...
Listing './lib/python3.5/site-packages/netaddr/contrib'...
Listing './lib/python3.5/site-packages/netaddr/eui'...
Listing './lib/python3.5/site-packages/netaddr/ip'...
Listing './lib/python3.5/site-packages/netaddr/strategy'...
Listing './lib/python3.5/site-packages/netaddr-0.7.19.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tenacity'...
Listing './lib/python3.5/site-packages/tenacity/tests'...
Listing './lib/python3.5/site-packages/tenacity-4.8.0.dist-info'...
Listing './lib/python3.5/site-packages/zeroos'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/client'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/atyourservice'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/gateway'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/grafana'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/healthchecks'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/influxdb'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/stats_collector'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/templates'...
Listing './lib/python3.5/site-packages/zeroos/orchestrator/sal/templates/dashboards'...
Listing './share'...
Listing './share/python-wheels'...
